기술에 독립적인 애플리케이션 서비스 트랜잭션 서비스 추상화