@@ -1,39 +1,39 @@
 package tobyspring.hellospring;
 
+import java.util.Arrays;
+import java.util.List;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.List;
-
 public class SortTest {
-    Sort sort;
 
-    @BeforeEach
-    void beforeEach() {
-        sort = new Sort();
-        System.out.println(this);
-    }
+  Sort sort;
 
-    @Test
-    void sort() {
-        List<String> list = sort.sortByLength(Arrays.asList("aa", "b"));
+  @BeforeEach
+  void beforeEach() {
+    sort = new Sort();
+    System.out.println(this);
+  }
 
-        Assertions.assertThat(list).isEqualTo(List.of("b", "aa"));
-    }
+  @Test
+  void sort() {
+    List<String> list = sort.sortByLength(Arrays.asList("aa", "b"));
 
-    @Test
-    void sort3Items() {
-        List<String> list = sort.sortByLength(Arrays.asList("aa", "ccc", "b"));
+    Assertions.assertThat(list).isEqualTo(List.of("b", "aa"));
+  }
 
-        Assertions.assertThat(list).isEqualTo(List.of("b", "aa", "ccc"));
-    }
+  @Test
+  void sort3Items() {
+    List<String> list = sort.sortByLength(Arrays.asList("aa", "ccc", "b"));
 
-    @Test
-    void sortAlreadySorted() {
-        List<String> list = sort.sortByLength(Arrays.asList("b", "aa", "ccc"));
+    Assertions.assertThat(list).isEqualTo(List.of("b", "aa", "ccc"));
+  }
 
-        Assertions.assertThat(list).isEqualTo(List.of("b", "aa", "ccc"));
-    }
+  @Test
+  void sortAlreadySorted() {
+    List<String> list = sort.sortByLength(Arrays.asList("b", "aa", "ccc"));
+
+    Assertions.assertThat(list).isEqualTo(List.of("b", "aa", "ccc"));
+  }
 }
